docs: apply PR2 review decisions - population sigma, DEMO_ACCOUNTS authoritative, E8 owns self-approval logging, E14/E15 scope change